--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -16903,6 +16903,88 @@ def maxCoins(nums: List[int]) -> int:
 ```
 
 
+### 统计理想数组的数目
+
+[2338. 统计理想数组的数目 - 力扣（LeetCode）](https://leetcode.cn/problems/count-the-number-of-ideal-arrays/?envType=daily-question&envId=2025-04-22)
+
+给你两个整数 `n` 和 `maxValue` ，用于描述一个 **理想数组** 。
+
+对于下标从 **0** 开始、长度为 `n` 的整数数组 `arr` ，如果满足以下条件，则认为该数组是一个 **理想数组** ：
+
+- 每个 `arr[i]` 都是从 `1` 到 `maxValue` 范围内的一个值，其中 `0 <= i < n` 。
+- 每个 `arr[i]` 都可以被 `arr[i - 1]` 整除，其中 `0 < i < n` 。
+
+返回长度为 `n` 的 **不同** 理想数组的数目。
+
+这道题如果用一般的动态规划思想，令 `dp[i][j]` 为长度为 `i+1` 且结尾元素为 `j` 的理想数组数量，则有
+
+```python
+def idealArrays(n: int, maxValue: int):
+	dp = [[0 for _ in range(maxValue+1)] for _ in range(n)]
+	MOD = 10 ** 9 + 7
+	for j in range(1, maxValue+1):
+		dp[0][j] = 1   # 以 j 结尾的长度为 1 的平衡子数组只有一个
+	
+	for i in range(1, n):
+		for j in range(1, maxValue+1):
+			for k in range(j, maxValue+1, j):  
+			# i + 1 长度且结尾为 k 的理想数组是长度为 i 且结尾为j的理想数组，k为j的倍数
+				dp[i][k] = (dp[i][k] + dp[i-1][j]) % MOD
+	cnt = 0
+	for j in range(1, maxValue+1):
+		cnt = (cnt + dp[n-1][j]) % MOD
+	return cnt
+```
+
+但是这样的复杂度较高，容易超时
+
+由于本题允许重复，并且理想数组是非严格递增，因此只需要考虑不同元素的个数，如果 maxValue 小于$10^4$，那么最多有$\log_2(10^4) = 13$ 个因子 （即 1、2、4、8、...、$2^{13}$）
+
+令 $k_i = \frac{a_i}{a_{i-1}}$，则一个理想数组对应着一个商分数组，如 $a=[1, 4, 4, 8, 8]$ 的商分数组 $k=[1,4,1,2,1]$。根据 k 的定义可以得到 k 中所有元素的乘积等于 a 中的最后一个元素。所以可以将问题转换为已知理想数组的最后一个元素，求商分数组的数量。
+
+可以先对最后一个元素进行质因子分解，统计每种质因子的数量，可以使用枚举法，从 i=2 开始枚举，如果 x 能被 i 整除，就不断地除 i，直到 x 不能被 i 整除为止，统计除 i 的次数，即为 x 中的质因子 i 的出现次数。当计算好一个质因子的数量 $c$ 时，我们需要考虑存在多少种放置方法，假设不同因子的数量为 $n$，则相当于将 $c$ 个相同的因子放在 $n$ 个不同的位置中，相当于有 n + c 个位置，将其划分为 n 份，即 $C(n+c-1, n-1) = C(n+c-1, c)$
+
+```python
+MOD = 1_000_000_007
+MAX_N = 10_000
+MAX_E = 13
+
+# EXP[x] 为x分解后每个质因数的出现次数（只需要关注次数，而不需要关注质因子到底是什么）
+EXP = [[] for _ in range(MAX_N + 1)]
+for x in range(2, len(EXP)):
+    t = x
+    i = 2  # i是因子
+    while i * i <= t:
+        e = 0  # e是出现次数（或者称为指数）
+        while t % i == 0:
+            e += 1
+            t //= i
+        if e:
+            EXP[x].append(e)
+        i += 1
+    if t > 1:  # 还剩下一个因子
+        EXP[x].append(1)
+
+# 预处理组合数 从 i 中选 j 个元素，对于第 i 个元素来说分成两种情况
+# 选（C[i - 1][j - 1]）和不选（C[i-1][j]）
+C = [[0] * (MAX_E + 1) for _ in range(MAX_N + MAX_E)]
+for i in range(len(C)):
+    C[i][0] = 1
+    for j in range(1, min(i, MAX_E) + 1):
+        C[i][j] = (C[i - 1][j] + C[i - 1][j - 1]) % MOD
+
+class Solution:
+    def idealArrays(self, n: int, maxValue: int) -> int:
+        ans = 0
+        for x in range(1, maxValue + 1):  # 枚举最大值
+            res = 1
+            for e in EXP[x]:
+                res = res * C[n + e - 1][e] % MOD
+            ans += res
+        return ans % MOD
+```
+
+
 
 ## 分治
 
