--- a/语音相关.md
+++ b/语音相关.md
@@ -158,6 +158,14 @@ $$
 
 **解码生成音频**：将声学模型生成的音频特征传递给声码器（Vocoder）。声码器是一个将音频特征转换成实际波形的模块。常见的声码器包括WaveNet、WaveGlow、HiFi-GAN等。
 
+### Montreal Forced Aligner
+
+[MontrealCorpusTools/Montreal-Forced-Aligner: Command line utility for forced alignment using Kaldi](https://github.com/MontrealCorpusTools/Montreal-Forced-Aligner)
+
+Montreal Forced Aligner 有预先编译好的软件包 https://github.com/MontrealCorpusTools/Montreal-Forced-Aligner/releases/download/v1.0.1/montreal-forced-aligner_win64.zip
+
+Montreal Forced Aligner 可以将音频和文本进行对齐，可以将音频对齐到单词、音节等级别，方便语音合成。
+
 ### Tacotron2
 
 每次输入数据时需要对不等长的数据进行补零， 模型的输入为`补零后的文本`，`输入的长度`，`补零后的梅尔谱图`，`补零后的门限（1表示补零）`和 `输出长度（未补零时的梅尔谱图长度）`。
