--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -9,7 +9,7 @@
 
 判断一个数是否能被7整除
 
-每个数都可以表示为 `10a+b` 的形式，已知 7a + 7b 能被7整除，那么只需要判断 `10a+b-7a-7b` 即 3a-6b 即 `a-2b` 能否被7整除。
+每个数都可以表示为 `10a+b` 的形式，已知 `7a + 7b` 能被 `7` 整除，那么只需要判断 `10a+b-7a-7b` 即 `3a-6b` 即 `a-2b` 能否被 `7` 整除。
 
 ```python
 def solve(num):
@@ -334,7 +334,7 @@ class Solution:
 
 给你一个整数 `n` ，统计并返回各位数字都不同的数字 `x` 的个数，其中 $0 \le x < 10^n$。
 
-该问题实际上为排列组合问题，我们先计算 n = 1 时的个数为 10，对于 n = 2 时的个数，只需要考虑 10 到 100 之间的两位数即可。首先第一位只能为 1-9 这9个数字，如果为0就变成一位数了，然后为了保证各位都不同，第二位数只能在剩下的9个数字中选择1个，如第一位数为1，则第二位数只能为0、2、3、4、...、9，共有 9 * 9 种可能。对于三位数，同样也有类似的情况，共有 $9 * A_9^2$ 种可能
+该问题实际上为排列组合问题，我们先计算 n = 1 时的个数为 10，对于 n = 2 时的个数，只需要考虑 10 到 100 之间的两位数即可。首先第一位只能为 1-9 这9个数字，如果为0就变成一位数了，然后为了保证各位都不同，第二位数只能在剩下的9个数字中选择1个，如第一位数为1，则第二位数只能为0、2、3、4、...、9，共有 `9 * 9` 种可能。对于三位数，同样也有类似的情况，共有 $9 * A_9^2$ 种可能
 
 ```python
 def countNumbersWithUniqueDigits(n: int):
@@ -512,7 +512,7 @@ for i in range(n):
 def getSum(self, a: int, b: int) -> int:
 	MASK1 = 4294967296  # 2^32
 	MASK2 = 2147483648  # 2^31
-	MASK3 = 2147483647  # 2^31
+	MASK3 = 2147483647  # 2^31 - 1
 	a %= MASK1
 	b %= MASK1
 	while b != 0:
@@ -786,7 +786,7 @@ def getLastMoment(n: int, left: List[int], right: List[int]) -> int:
 
 `dp[i]=max(dp[i], k*dp[i-k], k * (i-k))`
 
-该问题还可以这样思考，对于 n > 4 的情况下，我们无需大于等于 4 的因子，对于一个因子 a 大于等于 4，可以分解成 2 和 a-2，2 * (a-2) = 2a - 4 >= a，因此只需要 1、2、3 这三个因子即可。而 1 显然不是一个好的因子，所以范围被局限在 2 和 3 这两个因子中，由于`3 * 3 > 2 * 2 * 2`，因此 3 越多越好，除非分解到最后剩下 4，需要被分解为 2 * 2
+该问题还可以这样思考，对于 n > 4 的情况下，我们无需大于等于 4 的因子，对于一个因子 a 大于等于 4，可以分解成 2 和 a-2，`2 * (a-2) = 2a - 4 >= a`，因此只需要 1、2、3 这三个因子即可。而 1 显然不是一个好的因子，所以范围被局限在 2 和 3 这两个因子中，由于`3 * 3 > 2 * 2 * 2`，因此 3 越多越好，除非分解到最后剩下 4，需要被分解为 `2 * 2`
 
 ```python
 def integerBreak(self, n: int) -> int:
@@ -861,7 +861,7 @@ def canArrange(arr: List[int], k: int) -> bool:
 
 对于该问题，每次水量的变换只有增加 x，减少 x，增加 y，减少 y，其它变化是没有意义的。如倒空未装满的水壶相当于回到开始的状态，倒满未装满的水壶和直接倒满水壶没有区别。
 
-令 `ax + by = target` 有解的条件是 target 是 x 和 y 的最大公约数的倍数（贝祖定理）
+令 `a*x + b*y = target` 有解的条件是 target 是 x 和 y 的最大公约数的倍数（贝祖定理）
 
 ```python
 def canMeasureWater(x: int, y: int, target: int) -> bool:
@@ -1710,7 +1710,7 @@ def solve(nums):
 
 如果不要求常数空间，可以通过哈希记录每个元素的位置，如果出现重复元素就返回。
 
-如果将时间放宽一些，可以通过二分查找来实现，如果出现了一个变量是重复的，那么统计小于等于该变量的元素的个数，会发现个数大于等于这个变量。定义一个变量 `cnt` 统计小于等于 `mid` 的元素的数量，如果 `cnt > i`，证明该元素处于右半部分，否则处于左半部分
+如果将时间放宽一些，可以通过二分查找来实现，如果出现了一个变量是重复的，那么统计小于等于该变量的元素的个数，会发现个数大于等于这个变量。定义一个变量 `cnt` 统计小于等于 `mid` 的元素的数量，如果 `cnt > i`，证明该元素处于右半部分，否则处于左半部分。
 
 ```python
 def findDuplicate(nums: List[int]) -> int:
@@ -2984,7 +2984,7 @@ def hIndex(citations) -> int:
 	return ans
 ```
 
-另一种方法为直接搜索h-index，由h-index的定义可知，h-index最大为n，将左右设置为 `1` 和 `n`，数组访问时为 `mid-1`，这样不会越界，但是要初始设置结果为0，这样可以返回0这个答案
+另一种方法为直接搜索h-index，由h-index的定义可知，h-index最大为n，将左右设置为 `1` 和 `n`，数组访问时为 `n-mid`，这样不会越界，但是要初始设置结果为0，这样可以返回0这个答案
 
 ```python
 def hIndex(citations):
@@ -7075,7 +7075,7 @@ def permuteUnique(nums):
 
 该问题需要一边回溯，一边计算
 
-该问题如果不在回溯内部使用循环比较麻烦，需要额外传入当前值
+如果不在回溯内部使用循环比较麻烦，需要额外传入当前值
 
 ```python
 def addOperators(num: str, target: int) -> List[str]:
@@ -14420,7 +14420,7 @@ def JobSequencing(id, deadline, profit):
 ```
 
 
-还有另一种方法，使用最小堆保存利润最大的若干个工作
+还有另一种方法，按照截至时间（从小到大）和利润（从大到小）对工作进行排序，使用最小堆保存利润最大的若干个工作
 
 ```python
 def JobSequencing(id, deadline, profit):
@@ -15312,7 +15312,7 @@ def solve_dp(s1, s2):
                 dp[i][j] = dp[i-1][j-1]
             else:
 	            # dp[i-1][j-1] 代表修改 s1 的第 i 个字符
-	            # dp[i][j-1] 近似增加 s1 的第 i 个字符，
+	            # dp[i][j-1] 表示增加 s1 的第 i 个字符，
 	            # dp[i-1][j] 表示删除 s1 的第 i 个字符
                 dp[i][j] = 1 + min(dp[i-1][j-1], dp[i][j-1], dp[i-1][j])
     return dp[n1][n2]
@@ -16369,7 +16369,7 @@ def beautifulSubsets(nums, k: int) -> int:
 	n = len(nums)
 	cnt = 0
 	for mask in range(1, 1 << n):
-		arr = [nums[i] for i in range(len(nums)) if (mask >> i) & 1==1]
+		arr = [nums[i] for i in range(n) if (mask >> i) & 1==1]
 		flag = False
 		for i in range(len(arr)):
 			for j in range(i+1, len(arr)):
