--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -1684,7 +1684,7 @@ while (nums[i] <= n && nums[i] >= 1 && nums[i] != nums[nums[i]-1])
 }
 ```
 
-然后需要判断 `nums[i] != i + 1`，则返回 `i+1`
+然后如果 `nums[i] != i + 1`，则返回 `i+1`
 
 如果之前都符合，就返回 `len(nums)+1`
 
@@ -1699,6 +1699,50 @@ def solve(nums):
 		if nums[i] != i + 1:
 			return i + 1
 	return len(nums) + 1
+```
+
+
+### 寻找峰值
+
+[162. 寻找峰值 - 力扣（LeetCode）](https://leetcode.cn/problems/find-peak-element/description/)
+
+峰值元素是指其值严格大于左右相邻值的元素。给定一个元素全部都不相等的整数数组 `nums`，找到峰值元素并返回其索引。数组可能包含多个峰值，在这种情况下，返回 **任何一个峰值** 所在位置即可。可以假设 `nums[-1] = nums[n] = -∞` 。
+
+下面介绍一个时间复杂度为 $\log(n)$ 的解法
+
+因此，我们首先在 `[0,n)` 的范围内随机一个初始位置 `i`，随后根据 `nums[i−1]`,`nums[i]`,`nums[i+1]` 三者的关系决定向哪个方向走：
+
+如果 `nums[i−1]<nums[i]>nums[i+1]`，那么位置 i 就是峰值位置，我们可以直接返回 i 作为答案；
+
+如果 `nums[i−1]<nums[i]<nums[i+1]`，那么位置 i 处于上坡，我们需要往右走，即 i←i+1；
+
+如果 `nums[i−1]>nums[i]>nums[i+1]`，那么位置 i 处于下坡，我们需要往左走，即 i←i−1；
+
+如果 `nums[i−1]>nums[i]<nums[i+1]`，那么位置 i 位于山谷，两侧都是上坡，我们可以朝任意方向走。这种情况可以设置向两边更大值的方向走
+
+在上面的四种情况下，如果 `nums[i] < nums[i+1]`，那么永远不会向左走，如果 `nums[i]>nums[i+1]`，那么永远不会向右走，因此可以用二分查找的方法
+
+```python
+def findPeakElement(nums: List[int]):
+	n = len(nums)
+	if n == 1: return 0
+	l, r = 0, n - 1
+
+	def get(i):   # 避免复杂的边界条件处理
+		if i == -1 or i == n:
+			return float("-inf")
+		return nums[i]
+
+	while l <= r:
+		mid = l + (r - l) // 2
+		if get(mid) > get(mid - 1) and get(mid) > get(mid + 1):
+			return mid
+		
+		if get(mid) > get(mid + 1):
+			r = mid - 1
+		else:
+			l = mid + 1
+	return -1
 ```
 
 
@@ -3004,6 +3048,31 @@ def hIndex(citations):
 ```
 
 
+
+### 在旋转后的数组中找到最小值
+
+[153. 寻找旋转排序数组中的最小值 - 力扣（LeetCode）](https://leetcode.cn/problems/find-minimum-in-rotated-sorted-array/description/)
+
+如果 `nums[mid] > nums[r]` 证明右半部分出现了乱序，那么最小值在右半部分，设置 `l=mid+1`，反之在左半部分
+
+```python
+def findMin(nums):
+	n = len(nums)
+	left, right = 0, n - 1
+	ans = nums[0]
+	while left <= right:
+		mid = left + (right - left) // 2
+
+		if nums[mid] > nums[right]:  # 右边出现乱序，最小值在右边
+			left = mid + 1
+		else:
+			ans = min(ans, nums[mid])  # 更新最小值
+			right = mid - 1
+	return ans
+```
+
+
+
 ### 在旋转后的排序数组中搜索
 
 [33. 搜索旋转排序数组 - 力扣（LeetCode）](https://leetcode.cn/problems/search-in-rotated-sorted-array/)
@@ -3041,28 +3110,6 @@ def search(arr: List[int], target: int) -> int:
 	return -1
 ```
 
-
-### 在旋转后的数组中找到最小值
-
-[153. 寻找旋转排序数组中的最小值 - 力扣（LeetCode）](https://leetcode.cn/problems/find-minimum-in-rotated-sorted-array/description/)
-
-如果 `nums[mid] > nums[r]` 证明右半部分出现了乱序，那么最小值在右半部分，设置 `l=mid+1`，反之在左半部分
-
-```python
-def findMin(nums):
-	n = len(nums)
-	left, right = 0, n - 1
-	ans = nums[0]
-	while left <= right:
-		mid = left + (right - left) // 2
-
-		if nums[mid] > nums[right]:  # 右边出现乱序，最小值在右边
-			left = mid + 1
-		else:
-			ans = min(ans, nums[mid])  # 更新最小值
-			right = mid - 1
-	return ans
-```
 
 ### 在三个排好序的数组中找到最相近的数
 
@@ -3415,24 +3462,24 @@ def partition(arr, l, r):
     i = l
     j = r
 
-    pivit = arr[l]
+    pivot = arr[l]
     index = l
     while i < j:
 		# 在右侧找到小于pivot的值
         while j > i:
-            if arr[j] < pivit:
+            if arr[j] < pivot:
                 arr[index] = arr[j]
                 index = j
                 break
             j -= 1
         # 在左侧找到大于pivot的值
         while j > i:
-            if arr[i] > pivit:
+            if arr[i] > pivot:
                 arr[index] = arr[i]
                 index = i
                 break
             i += 1
-    arr[index] = pivit
+    arr[index] = pivot
     return index
 
 def quickSort(arr, l, r):
@@ -4632,6 +4679,7 @@ def findTriplet(arr):
 
 [Trapping Rain Water Problem - Tutorial with Illustrations - GeeksforGeeks](https://www.geeksforgeeks.org/trapping-rain-water/)
 
+[42. 接雨水 - 力扣（LeetCode）](https://leetcode.cn/problems/trapping-rain-water/description/)
 #### 自己的算法
 
 先找到全局最大值，然后从两边向最大值靠拢计算能收集的雨水。从左到右，如果遇到右侧大于等于左侧的**最大值**就计算一个能存储的雨水量。
@@ -4805,6 +4853,8 @@ def subarraySum(arr, target):
 
 ### 固定大小的子序列中的最大值
 
+[239. 滑动窗口最大值 - 力扣（LeetCode）](https://leetcode.cn/problems/sliding-window-maximum/)
+
 用一个最大堆保存当前窗口的元素和索引，为了弹出最大值，需要对元素取负值。删除元素时，需要注意用一个 while 判断栈顶元素的索引是否还在窗口内，如果不在窗口中，就删除栈顶元素。
 
 ```python
@@ -4905,10 +4955,10 @@ def printFirstNegativeIntegar(arr, n, k):
 
 这里需要统计当前滑动窗口内的字符是否满足目标字符串的构成，如果一个个比较，会很慢，可以用一个变量设置为目标字符串元素的种类数，这样如果第一次元素数相等，种类数减一，如果种类数为0，则证明已经覆盖了。
 
-在求最小字串时，如果同时移动左右指针，会很麻烦，不如先确定右边界，如果窗口内包含了所有的元素再调整左边界。
+在求最小子串时，如果同时移动左右指针，会很麻烦，不如先确定右边界，如果窗口内包含了所有的元素再调整左边界。
 
 ```python
-def solve(s, t):
+def minWindow(s, t):
     target = dict(Counter(t))
     window = {}
     for key in target:
@@ -5387,7 +5437,7 @@ def findPermutation(s):
 
 ### 最长回文字符串
 
-[Longest Palindromic Substring - GeeksforGeeks](https://www.geeksforgeeks.org/longest-palindromic-substring/)
+[5. 最长回文子串 - 力扣（LeetCode）](https://leetcode.cn/problems/longest-palindromic-substring/description/)
 
 遍历字符串的每个位置 `i`，以 `i` 为中心向两边扩展统计回文字符串的长度，以及以 `i` 和 `i+1` 为中心的回文字符串长度。
 
@@ -15636,6 +15686,38 @@ def solve_s(s):
     return max_len
 ```
 
+
+还有另外一种思路，先从左向右遍历，记录左括号和右括号的数量，当左括号和右括号的数量相等时，证明存在一个合法的括号序列，可以更新结果，但是如果右括号的数量大于左括号，证明当前括号序列已经非法，将左右括号的数量置为0。
+
+如果计数时，左括号的数量一直大于右括号的数量，那么就无法更新，可以反向再来一次
+
+```python
+def longestValidParentheses(s: str) -> int:
+	left, right = 0, 0
+	cnt = 0
+
+	for i in range(len(s)):
+		if s[i] == "(":
+			left += 1
+		else:
+			right += 1
+		if left == right:
+			cnt = max(cnt, 2 * left)
+		elif right > left:    # 遇到非法的括号
+			left = right = 0
+	# 反向来一次
+	left = right = 0
+	for i in range(len(s) - 1, -1, -1):
+		if s[i] == "(":
+			left += 1
+		else:
+			right += 1
+		if left == right:
+			cnt = max(cnt, 2 * left)
+		elif left > right:
+			left = right = 0
+	return cnt
+```
 
 ### 最长的斐波那契子序列的长度
 
