--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -7235,6 +7235,8 @@ def canPartitionKSubsets(nums, k: int) -> bool:
 
 [1723. 完成所有工作的最短时间 - 力扣（LeetCode）](https://leetcode.cn/problems/find-minimum-time-to-finish-all-jobs/description/)
 
+
+
 给你一个整数数组 `jobs` ，其中 `jobs[i]` 是完成第 `i` 项工作要花费的时间。
 
 请你将这些工作分配给 `k` 位工人。所有工作都应该分配给工人，且每项工作只能分配给一位工人。工人的 **工作时间** 是完成分配给他们的所有工作花费时间的总和。请你设计一套最佳的工作分配方案，使工人的 **最大工作时间** 得以 **最小化** 。返回分配方案中尽可能 **最小** 的 **最大工作时间** 。
@@ -11453,6 +11455,59 @@ def solve(s):
     depth = _solve(s, n, index)
     return depth
 ```
+
+
+### 单词的压缩编码
+
+[820. 单词的压缩编码 - 力扣（LeetCode）](https://leetcode.cn/problems/short-encoding-of-words/description/)
+
+单词数组 `words` 的 **有效编码** 由任意助记字符串 `s` 和下标数组 `indices` 组成，且满足：
+
+- `words.length == indices.length`
+- 助记字符串 `s` 以 `'#'` 字符结尾
+- 对于每个下标 `indices[i]` ，`s` 的一个从 `indices[i]` 开始、到下一个 `'#'` 字符结束（但不包括 `'#'`）的 **子字符串** 恰好与 `words[i]` 相等
+
+给你一个单词数组 `words` ，返回成功对 `words` 进行编码的最小助记字符串 `s` 的长度 。
+
+
+本题实际上是求数组中哪些单词是其它单词的后缀，因此可以先将所有的单词存入集合中，再遍历每个单词的所有后缀，删除后缀对应的单词
+
+```python
+def minimumLengthEncoding(words: List[str]) -> int:
+	prefixs = set(words)
+
+	for word in words:
+		for k in range(1, len(word)):
+			prefixs.discard(word[k:])   # discard 即使不存在也不会引发异常
+	
+	return sum(len(word) + 1 for word in prefixs)
+```
+
+另一种做法是利用字典树，将单词先反序存入字典树中，然后计算叶子节点对应的单词的长度
+
+```python
+def minimumLengthEncoding(self, words: List[str]) -> int:
+	words = list(set(words))
+	trie = {}  # 根节点
+	nodes = []
+
+	for word in words:
+		now = trie
+		for w in word[::-1]:
+			if w in now:
+				now = now[w]
+			else:
+				now[w] = {}
+				now = now[w]
+		nodes.append(now)
+	cnt = 0
+	for w, c in zip(words, nodes):
+		if len(c) == 0:   # 空字典证明为子节点
+			cnt += len(w) + 1
+	return cnt
+
+```
+
 
 
 ### AVL 树
@@ -16384,23 +16439,51 @@ def solve(s):
 
 [Optimal Strategy for a Game - GeeksforGeeks](https://www.geeksforgeeks.org/optimal-strategy-for-a-game-dp-31/)
 
+[486. 预测赢家 - 力扣（LeetCode）](https://leetcode.cn/problems/predict-the-winner/description/)
+
 一组不同面值的硬币，两名用户取硬币，每一回合只能取一次硬币，求先出手的玩家能获得的最大数量硬币
 
 ```python
-def solve(arr):
-    def _solve(arr, l, r):
-        if l > r:
-            return 0
+def predictTheWinner(nums: List[int]) -> bool:
+	n = len(nums)
+	tot = sum(nums)
+	@cache
+	def dfs(l, r):
+		if l > r:
+			return 0
+		
+		cnt1 = nums[l] + min(dfs(l+1, r - 1), dfs(l+2, r))
 
-        # 玩家选择最开始的硬币，对手会选择使我们利润最小的硬币
-        cnt1 = arr[l] + min(_solve(arr, l+1, r-1), _solve(arr, l+2, r))
-       
-        # 玩家选择最后面的硬币
-        cnt2 = arr[r] + min(_solve(arr, l, r-2), _solve(arr, l+1, r-1))
+		cnt2 = nums[r] + min(dfs(l+1, r - 1), dfs(l, r - 2))
+		
+		return max(cnt1, cnt2)
+	
+	player1 = dfs(0, n - 1)
 
-        return max(cnt1, cnt2)
-    res = _solve(arr, 0, len(arr)-1)
-    return res
+	return player1 >= tot - player1
+```
+
+同时还有动态规划的解法，令 `dp[i][j]` 为数组剩下的部分为下标 i 到下标 j 时，即在下标范围 `[i,j]` 中，当前玩家与另一个玩家的分数之差的最大值。
+
+如果 `i=j`，只剩一个数字，当前玩家只能拿取这个数字，因此对于所有 `0≤i<nums.length`，都有`dp[i][i]=nums[i]`。
+
+当 `i<j` 时，当前玩家可以选择 `nums[i]` 或 `nums[j]`，然后轮到另一个玩家在数组剩下的部分选取数字。在两种方案中，当前玩家会选择最优的方案，使得自己的分数最大化。因此可以得到如下状态转移方程：
+
+`dp[i][j] = max(nums[i] - dp[i+1][j], nums[j]-dp[i][j-1])`
+
+```python
+def predictTheWinner(nums: List[int]) -> bool:
+	n = len(nums)
+	dp = [[0 for i in range(n)] for _ in range(n)]
+
+	for i, num in enumerate(nums):
+		dp[i][i] = num
+
+	for i in range(n - 2, -1, -1):
+		for j in range(i+1, n):
+			dp[i][j] = max(nums[i] - dp[i+1][j], nums[j]-dp[i][j-1])        
+
+	return dp[0][n-1] >= 0
 ```
 
 
