--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -16238,7 +16238,7 @@ def solve_dp(jobs):
 
 对于模式字符串，如果遇到 `*`，那么分为两种情况，一种是不匹配之前的字符，即判断 `s[:i]` 和 `p[:j-2]` 之间是否匹配：`dp[i][j] |= dp[i][j-2]`
 
-另一种情况是判断字符串是否和模式字符串之前的字符匹配：如果匹配有`dp[i][j] != dp[i-1][j]`
+另一种情况是判断字符串是否和模式字符串之前的字符匹配：如果匹配有`dp[i][j] |= dp[i-1][j]`
 
 如果遇到`.`，直接匹配下一个字符，`dp[i][j] |= dp[i-1][j-1]`
 
