--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -11331,25 +11331,6 @@ def solve(root):
 
 另一种解决该问题的方法是先中序遍历树，对于二叉搜索树而言，中序遍历的结果是递增的，如果中序遍历的结果非递增，则证明不是二叉搜索树。
 
->如果需要找到二叉搜索树中第 k 大的数，有这样的解法，使用中序遍历的倒序获得从大到小的排列，在遍历如果发现已经找到第 k 大的数时停止后续的迭代
-
-
-```python
-def findTargetNode(root: Optional[TreeNode], cnt: int):
-	def inorder(root):
-		if root is None:
-			return
-		inorder(root.right)   # 先访问右子树
-		if self.cnt == 0: return   # 避免后续的遍历
-		self.cnt -= 1
-		if self.cnt == 0: self.res = root.val
-		inorder(root.left)
-	self.cnt = cnt
-	self.res = 0
-	inorder(root)
-	return self.res
-```
-
 
 ### 二叉搜索树的删除
 
@@ -11952,6 +11933,24 @@ def kthSmallest(root: Optional[TreeNode], k: int) -> int:
 	return self.res
 ```
 
+>如果需要找到二叉搜索树中第 k 大的数，有这样的解法，使用中序遍历的倒序获得从大到小的排列，在遍历如果发现已经找到第 k 大的数时停止后续的迭代
+
+
+```python
+def findTargetNode(root: Optional[TreeNode], cnt: int):
+	def inorder(root):
+		if root is None:
+			return
+		inorder(root.right)   # 先访问右子树
+		if self.cnt == 0: return   # 避免后续的遍历
+		self.cnt -= 1
+		if self.cnt == 0: self.res = root.val
+		inorder(root.left)
+	self.cnt = cnt
+	self.res = 0
+	inorder(root)
+	return self.res
+```
 
 如果需要多次查找不同的k，可以先计算每个根节点左右子树中节点的数量。在搜索时，如果k大于该节点左子树中节点的数量，则在右子树中搜索；相等则就是该节点；否则在左子树中寻找
 
@@ -11998,7 +11997,7 @@ class MyBst:
 
 并查集主要由一个整型数组 pre 和两个函数 find、join 构成。数组 pre 记录了每个点的前驱节点是谁，函数 find(x) 用于查找指定节点 x 属于哪个集合，函数 join(x,y) 用于合并两个节点 x 和 y 。
 
-find函数的实现
+下面是一个简单的实现
 
 ```python
 class DisjointSet:
@@ -12019,6 +12018,26 @@ class DisjointSet:
         self.pre[ir] = jr  # i 的代表也是 j 的代表
 ```
 
+简单实现的效率比较低，下面直接给出一个常用的实现
+
+```python
+class DisjointSet:
+    def __init__(self, n):
+        self.pre = list(range(n))
+    
+    def find(self, i):
+        # 如果 i 和i的上级节点相同，证明i自己就是最上级的节点（代表）
+        if self.pre[i] != i:
+            self.pre[i] = self.find(self.pre[i])
+        return self.pre[i]
+
+    # 合并两个不相交的集合
+    def join(self, i, j):
+        ir = self.find(i)  # 找到 i 的代表
+        jr = self.find(j)  # 找到 j 的代表
+
+        self.pre[ir] = jr  # i 的代表也是 j 的代表
+```
 
 在查询时，如果遇到节点是一级一级的情况会很浪费时间，这时候需要进行路径压缩，一种简单的方法是，如果节点 i 的代表节点为 k 的话，直接将 k 作为 i 的上级节点
 
@@ -12030,7 +12049,6 @@ def find2(self, i):
 		return self.pre[i]
 	return ip
 ```
-
 
 在合并时，也有优化的算法，为所有的节点添加一个属性，表示该节点在树中的高度，在合并时，根据树的高度来判断谁是谁的上级，树高的作为上级。
 
