--- a/人工智能.md
+++ b/人工智能.md
@@ -2118,7 +2118,7 @@ $$
 KAN在小规模的AI+Science任务中会比MLP有更好的效果。KAN还适合符号语言。
 
 
-## Mamba
+## SSM
 
 
 目前仅在Linux上安装成功，从 [Releases · state-spaces/mamba](https://github.com/state-spaces/mamba/releases) 中下载符合版本要求的whl文件，直接 `pip install xxx.whl` 即可。
@@ -2205,6 +2205,31 @@ Mamba 让矩阵 B，C 和 $\Delta$ 与输入有关
 Mamba 块的结构如下所示
 
 ![](https://www.maartengrootendorst.com/images/posts/2024-21-02-mamba/64.svg)
+
+### Hungry Hungry Hippos
+
+[[2212.14052] Hungry Hungry Hippos: Towards Language Modeling with State Space Models](https://arxiv.org/abs/2212.14052)
+
+[HazyResearch/H3: Language Modeling with the H3 State Space Model](https://github.com/HazyResearch/H3/tree/main)
+
+简写为H3，也是一种状态空间模型，基本结构如下所示
+
+![](images/h3.png)
+
+对 x 进行映射，得到Q、K、V，K 经过一个SSM，这里是一个卷积操作，但是为了避免卷积核过大导致计算量增加，使用FFT实现卷积
+
+有人用这个模型替换Conformer中的注意力，[ISCA Archive - Efficient and Robust Long-Form Speech Recognition with Hybrid H3-Conformer](https://www.isca-archive.org/interspeech_2024/honda24_interspeech.html)
+
+
+## 语言建模模型
+
+### RetNet
+
+[[2307.08621] Retentive Network: A Successor to Transformer for Large Language Models](https://arxiv.org/abs/2307.08621)
+[microsoft/torchscale: Foundation Architecture for (M)LLMs](https://github.com/microsoft/torchscale)
+
+提出了multi-scale retention 模块（MSR）替换多头注意力模块，MSR模块可以实现并行训练和递归推理。
+
 
 
 # LLM
