--- a/推荐算法.md
+++ b/推荐算法.md
@@ -167,6 +167,68 @@ recommendations.show()
 ```
 
 
+## VAE
+
+具体实现参考：[standard_vae_deep_dive.ipynb](https://github.com/recommenders-team/recommenders/blob/main/examples/02_model_collaborative_filtering/standard_vae_deep_dive.ipynb)
+
+基于VAE的推荐是一种无监督的算法，使用 $u \in \{1,\dots,U\}$ 表示用户，$i \in \{1,\dots,I\}$ 表示物品
+
+VAE 的输入是用户 `u` 的点击矩阵 $\mathbf{x}_u =[X_{u1},\dots,X_{uI}]^\top \in \mathbb{N}^I$，编码为均值 $m_{u}$ 和标准差 $\sigma_{u}$，均值和方差均为 K 维，表示 K 个物品的概率分布，然后重采样一个向量 $\mathbf{z}_u$ ∼ N(${m}_u$, $\mathbf{\sigma}_u$)，最后解码为原来维度的矩阵。
+
+目标函数为 ELBO 下界
+
+$$
+Loss= \log p_\theta(\mathbf{x}_u | \mathbf{z}_u) -  KL (q(\mathbf{z}_u)||p(\mathbf{z}_u|\mathbf{x}_u))
+$$
+其中 $\mathbf{x}_u$ 可以看成物品的特征向量，$\mathbf{z}_u$ 是 $\mathbf{x}_u$ 的隐藏表示。要求优化使得ELBO下界最大化
+
+
+## Surprise Singular Value Decomposition
+
+
+算法实现：[NicolasHug/Surprise: A Python scikit for building and analyzing recommender systems](https://github.com/NicolasHug/Surprise)
+算法示例：[surprise_svd_deep_dive.ipynb](https://github.com/recommenders-team/recommenders/blob/main/examples/02_model_collaborative_filtering/surprise_svd_deep_dive.ipynb)
+
+SVD 在ALS的基础上加上了两个新变量，用户偏置 $b_u$ 和物品偏置 $b_i$，预测的评分为
+
+$$
+\hat r_{u,i} = \mu + b_u + b_i + q_{i}^{T}p_{u}
+$$
+$\mu$ 是所有评分的均值，优化问题变为
+
+$$
+\sum(r_{u,i} - (\mu + b_u + b_i + q_{i}^{T}p_{u}))^2 +     \lambda(b_i^2 + b_u^2 + ||q_i||^2 + ||p_u||^2)
+$$
+使用随机梯度下降算法优化，优化步骤如下
+$$
+b_u \leftarrow b_u + \gamma (e_{ui} - \lambda b_u)
+$$
+$$
+b_i \leftarrow b_i + \gamma (e_{ui} - \lambda b_i)
+$$
+$$
+p_u \leftarrow p_u + \gamma (e_{ui} \cdot q_i - \lambda p_u)
+$$
+$$
+q_i \leftarrow q_i + \gamma (e_{ui} \cdot p_u - \lambda q_i)
+$$
+
+其中 $e_{ui} =  r_{ui} - \hat r_{u,i} = r_{u,i} - (\mu + b_u + b_i + q_{i}^{T}p_{u})$，$\gamma$ 为偏置。
+
+
+```python
+from surprise import SVD
+from surprise import Dataset
+from surprise.model_selection import cross_validate
+
+data = Dataset.load_builtin('ml-100k')
+
+algo = SVD()
+
+cross_validate(algo, data, measures=['RMSE', 'MAE'], cv=5, verbose=True)
+```
+
+
 
 # Content-Based 算法
 
