--- a/推荐算法.md
+++ b/推荐算法.md
@@ -229,6 +229,151 @@ cross_validate(algo, data, measures=['RMSE', 'MAE'], cv=5, verbose=True)
 ```
 
 
+## SAR
+
+使用示例：[sar_deep_dive.ipynb](https://github.com/recommenders-team/recommenders/blob/main/examples/02_model_collaborative_filtering/sar_deep_dive.ipynb)
+
+SAR：Simple Algorithm for Recommendation
+
+推荐可以看成通过两个中间矩阵（物品之间的相似度矩阵 $S$ 和用户-物品关系矩阵 $A$），推荐分数通过 $A \times S$ 计算。
+
+SAR 定义物品之间的相似度通过给定用户物品同时出现的次数来表示，定义物品的同时出现矩阵 $C$大小为 $m\times m$，$c_{ij}$ 是物品 $i$ 和物品 $j$ 同时出现的次数。
+
+通过 $C$ 可以计算 $S$，有三种计算方式，分别为 `Jaccard`、`lift` 和 `counts`
+
+- `Jaccard`: $s_{ij}=\frac{c_{ij}}{(c_{ii}+c_{jj}-c_{ij})}$
+- `lift`: $s_{ij}=\frac{c_{ij}}{(c_{ii} \times c_{jj})}$
+- `counts`: $s_{ij}=c_{ij}$
+
+一般情况下，使用 `counts` 作为相似度指标有利于可预测性，这意味着最受欢迎的项目将大部分时间被推荐。相比之下，`lift` 有利于可发现性/意外发现：一个整体上不太受欢迎但被一小部分用户高度喜爱的项目更有可能被推荐。`Jaccard` 是两者的折中方案。
+
+
+用户-物品关系矩阵 $A$ 衡量用户和已经访问过的物品之间的强度
+
++ 考虑通过不同事件的差异化加权来获取关于用户-物品交互类型的信息（例如，它可能会比用户查看物品的事件更重视用户对特定物品进行评分的事件）。
+
++ 考虑用户-物品事件发生的时间信息（例如，它可能会降低发生在遥远过去的事件的价值。)
+
+因此，矩阵 $A$ 的计算公式为
+
+$$
+a_{ij}=\sum_k w_k \left(\frac{1}{2}\right)^{\frac{t_0-t_k}{T}} 
+$$
+计算完 $A$ 和 $S$ 后，通过$A \times S$ 计算推荐分数，去掉已经交互过的，再选择分数最高的几个进行推荐即可。
+
+
+## Restricted Boltzmann Machine
+
+实现示例：[rbm_deep_dive.ipynb](https://github.com/recommenders-team/recommenders/blob/main/examples/02_model_collaborative_filtering/rbm_deep_dive.ipynb)
+
+受限玻尔兹曼机是一个生成模型，学习与输入有关的可视单元 $v$ 和隐藏单元 $h$ 之间的联合概率分布 $P(v, h)$，概率分布的一般表示
+
+$$
+P = \frac{1}{Z} \, e^{- \beta \, H}
+$$
+H 是哈密顿矩阵，描述可视单元（包括输入和输出）到隐藏单元的映射关系。
+
+以movielens数据集为例，输入为1-5的评分$\chi_v = \{ 1, 2, 3,4,5 \}$，因此 $\mathbf{v} = (v_1, v_2, ..., v_m) \in \chi_v^m$，0可以用于表示未评分。隐藏单元可以用随机的二元变量 $\chi_h = \{0,1 \}$ 表示特定单元是否激活，$\mathbf{h} = (h_1, h_2, ...,h_n) \in \chi_h^n$。隐藏单元可以描述电影的流派。整个系统可以表示为
+
+$$
+H = - \sum_{i,j \in G} v_i \, w_{ij} \, h_j - \sum_{i=1}^m v_i \, a_i - \sum_{j=1}^n h_i \, b_i
+$$
+其中 $a_i$ 和 $b_i$ 是可学习的偏置。
+
+因为是无监督学习，没有实际的输出，所以模型通过最小化自由能来进行优化
+
+$$
+F =- \log Z =- \log \sum_{ v_i, h_i } P(v, h)
+$$
+
+## NCF
+
+实现示例：[ncf_deep_dive.ipynb](https://github.com/recommenders-team/recommenders/blob/main/examples/02_model_collaborative_filtering/ncf_deep_dive.ipynb)
+
+NCF 是一种矩阵分解模型，集成了广义矩阵分解（GMF）和MLP，如下图所示
+
+![](images/recommend/ncf.svg)
+
+
+GMF 可以表示为 
+$$
+\hat { r } _ { u , i } = a _ { o u t } \left( h ^ { T } \left( q _ { i } \odot p _ { u } \right) \right)
+$$
+${a}_{out}$ 和 ${h}$ 分别为激活函数和权重。
+
+MLP 可以表示为
+$$
+z _ { 1 } = \phi _ { 1 } \left( p _ { u } , q _ { i } \right) = \left[ \begin{array} { c } { p _ { u } } \\ { q _ { i } } \end{array} \right]
+$$
+$$
+\phi _ { l } \left( z _ { l } \right) = a _ { o u t } \left( W _ { l } ^ { T } z _ { l } + b _ { l } \right) , ( l = 2,3 , \ldots , L - 1 )
+$$
+$$
+\hat { r } _ { u , i } = \sigma \left( h ^ { T } \phi \left( z _ { L - 1 } \right) \right)
+$$
+GMF 和 MLP 的输出结合后得到预测的分数
+
+$$
+\phi _ { u , i } ^ { G M F } = p _ { u } ^ { G M F } \odot q _ { i } ^ { G M F }
+$$
+$$
+\phi _ { u , i } ^ { M L P } = a _ { o u t } \left( W _ { L } ^ { T } \left( a _ { o u t } \left( \ldots a _ { o u t } \left( W _ { 2 } ^ { T } \left[ \begin{array} { c } { p _ { u } ^ { M L P } } \\ { q _ { i } ^ { M L P } } \end{array} \right] + b _ { 2 } \right) \ldots \right) \right) + b _ { L }\right.
+$$
+$$
+\hat { r } _ { u , i } = \sigma \left( h ^ { T } \left[ \begin{array} { l } { \phi ^ { G M F } } \\ { \phi ^ { M L P } } \end{array} \right] \right)
+$$
+损失函数为二元交叉熵损失
+
+
+## LightGCN
+
+应用示例：[lightgcn_deep_dive.ipynb](https://github.com/recommenders-team/recommenders/blob/main/examples/02_model_collaborative_filtering/lightgcn_deep_dive.ipynb)
+
+LightGCN是轻量化的图协同过滤算法，将图卷积网络用于推荐系统。
+
+![](images/recommend/lightgcn.png)
+
+将用户对物品的评分看成一条边
+![](images/recommend/lightgcn2.jpg)
+对于 lightGCN，使用简单的加权求和进行汇聚，所以只需要训练第0层的参数，即所有用户的 $\mathbf{e}_{u}^{(0)}$ 和所有物品的 $\mathbf{e}_{i}^{(0)}$，经过k层的加权求和得到
+$$
+\mathbf{e}_{u}=\sum_{k=0}^{K} \alpha_{k} \mathbf{e}_{u}^{(k)} ; \quad \mathbf{e}_{i}=\sum_{k=0}^{K} \alpha_{k} \mathbf{e}_{i}^{(k)}
+$$
+此处的 $\alpha_k$ 可以设置为 $1/(K+1)$，预测分数为
+$$
+\hat{y}_{u i}=\mathbf{e}_{u}^{T} \mathbf{e}_{i}
+$$
+
+## FM
+
+应用示例：[fm_deep_dive.ipynb](https://github.com/recommenders-team/recommenders/blob/main/examples/02_model_collaborative_filtering/fm_deep_dive.ipynb)
+
+FM（Factorization Machine，因子分解机）用于处理高度稀疏的数据，FM一般表示为
+
+$$
+\hat{y}(\textbf{x})=w_{0}+\sum^{n}_{i=1}w_{i}x_{i}+\sum^{n}_{i=1}\sum^{n}_{j=i+1}<\textbf{v}_{i}, \textbf{v}_{j}>x_{i}x_{j}
+$$
+$<\textbf{v}_{i}, \textbf{v}_{j}>$ 是两个隐藏因子的点乘
+$$<\textbf{v}_{i}, \textbf{v}_{j}>=\sum^{k}_{f=1}v_{i,f}\cdot v_{j,f}$$
+
+## BPR
+
+应用示例：[cornac_bpr_deep_dive.ipynb](https://github.com/recommenders-team/recommenders/blob/main/examples/02_model_collaborative_filtering/cornac_bpr_deep_dive.ipynb)
+
+BPR（Bayesian Personalized Ranking，贝叶斯个性化排序）可以为每个用户提供一个排好序的物品列表，这在推荐系统基于隐式用户行为（例如购买、点击）的场景中非常常见。可用的观察结果只有正面反馈，而未观察到的结果则是一系列真实负面反馈和缺失值的混合。
+
+
+## BiVAE
+
+应用示例：[cornac_bivae_deep_dive.ipynb](https://github.com/recommenders-team/recommenders/blob/main/examples/02_model_collaborative_filtering/cornac_bivae_deep_dive.ipynb)
+
+一般的VAE要么只有用户被明确表示，而物品则被视为用户向量空间中的特征，或者反过来，物品被明确表示，用户作为物品向量空间中的特征
+
+BiVAE 则将用户和物品同时表示出来
+
+![](images/recommend/bivae.jpg)
+
+
 
 # Content-Based 算法
 
