--- a/离散数学.md
+++ b/离散数学.md
@@ -698,7 +698,7 @@ $$
 
 ### 素数和最大公约数
 
-这里的很多内容在stein写的《Fouier analysis》这本书的狄利克雷定理那一章初等数论部分有，笔记见  [数学.md](数学.md)  #傅里叶分析  #狄利克雷定理。
+这里的很多内容在stein写的《Fouier analysis》这本书的狄利克雷定理那一章初等数论部分有，笔记见  [数学.md](数学.md)  中的傅里叶分析和狄利克雷定理。
 
 **埃拉托斯特尼筛法**：用来寻找不超过一个给定整数的所有素数。不超过 100 的合数必定有一个不超过 10 的素因子。因为小于 10 的素数仅有 2 、 3 、5 和 7, 所以不超过 100 的素数就是这四个素数以及那些大于 1 且不超过 100 同时不能被 2 、 3 、5 和 7 之一整除的正整数。
 
