--- a/推荐算法.md
+++ b/推荐算法.md
@@ -377,9 +377,11 @@ BiVAE 则将用户和物品同时表示出来
 
 # Content-Based 算法
 
+## 基本知识
+
 基于项目（物品）特征和用户历史偏好的推荐方法。根据用户过去喜欢的内容特征，推荐与之相似的内容。
 
-#### 工作原理
+### 工作原理
 
 对物品（如电影、书籍、商品等）进行特征化处理，例如提取类别、描述、关键词等。
 
@@ -387,8 +389,7 @@ BiVAE 则将用户和物品同时表示出来
 
 使用相似度算法（如余弦相似度、欧几里得距离）计算用户画像与物品特征的相似性。
 
-
-#### 优势
+### 优势
 
 **个性化推荐** ：基于用户兴趣生成推荐，个性化程度高。
 
@@ -396,7 +397,7 @@ BiVAE 则将用户和物品同时表示出来
 
 **可解释性强** ：推荐结果基于特征相似性，容易解释为什么推荐某物品。
 
-#### 局限
+### 局限
 
 **冷启动问题（物品侧）**：对新物品（没有用户历史数据），无法有效推荐。
 
@@ -405,6 +406,30 @@ BiVAE 则将用户和物品同时表示出来
 **特征依赖强**：如果物品的特征无法有效提取，推荐效果会大打折扣。
 
 
+## DKN
+
+应用示例：[dkn_deep_dive.ipynb](https://github.com/recommenders-team/recommenders/blob/main/examples/02_model_content_based_filtering/dkn_deep_dive.ipynb)
+
+
+DKN 利用知识图谱来实现新闻推荐，DKN 的结构如下图所示
+
+![](images/recommend/dkn.png)
+
+DKN 的输入是用户点击过的新闻，设计了KCNN模块来处理新闻标题得到嵌入特征。
+
+
+## LightGBM
+
+应用示例：[mmlspark_lightgbm_criteo.ipynb](https://github.com/recommenders-team/recommenders/blob/main/examples/02_model_content_based_filtering/mmlspark_lightgbm_criteo.ipynb)
+
+基于 LightGBM 和 MMLSpark（可以在spark环境中使用LightGBM） 实现
+
+
+## Vowpal Wabbit
+
+应用示例：[vowpal_wabbit_deep_dive.ipynb](https://github.com/recommenders-team/recommenders/blob/main/examples/02_model_content_based_filtering/vowpal_wabbit_deep_dive.ipynb)
+
+Vowpal Wabbit 是一个快速在线机器学习库。支持多种回归算法：线性回归、逻辑回归、多元逻辑回归和矩阵分解算法：奇异值分解、因子分解机
 
 # 推荐算法库
 
