--- a/工具使用.md
+++ b/工具使用.md
@@ -499,6 +499,47 @@ pull.sh https://github.com/microsoft/vscode.git src
 ```
 
 
+## 将本地的非git代码推送到远程仓库的分支
+
+
+1、进入代码目录
+
+```bash
+cd /path/to/your/code
+```
+
+2、 初始化本地 Git 仓库
+
+```bash
+git init
+```
+
+ 3、添加远程仓库地址
+
+```bash
+git remote add origin https://github.com/yourusername/your-repo.git
+```
+
+4、 创建并切换到你希望推送的新分支（比如 `new-branch`）
+
+```bash
+git checkout -b new-branch
+```
+
+5、添加所有文件并提交
+
+```bash
+git add .
+git commit -m "Initial commit on new branch"
+```
+
+6、推送到远程的新分支
+
+```bash
+git push origin new-branch
+```
+
+
 
 # WebAssembly
 
