--- a/推荐算法.md
+++ b/推荐算法.md
@@ -449,3 +449,8 @@ Github：[recommenders-team/recommenders: Best Practices on Recommendation Syste
 文档：[Recommender Utilities — Recommenders 1.1.1 documentation](https://microsoft-recommenders.readthedocs.io/en/latest/)
 
 包含了一些推荐算法和数据集
+
+
+## Torchrec
+
+[pytorch/torchrec](https://github.com/pytorch/torchrec)
