--- a/人工智能.md
+++ b/人工智能.md
@@ -864,6 +864,35 @@ $$
 其中，$N(v)$ 为 v 的邻接节点，即将 v 的邻接节点聚合起来再做一个线性映射。
 
 
+# 训练技巧
+
+## 指数移动平均（EMA）
+
+在训练模型时通过ema来稳定验证时的模型参数，具体做法是维护一个影子权重，初始时，影子权重 $v_t$ 直接deepcopy原模型权重 $\theta_t$。每训练一定步数，利用ema更新影子权重：
+
+$$
+v_t = \beta \cdot v_{t-1} + (1-\beta) \cdot \theta_t
+$$
+这里的$\beta$一般会取一个比较大的值如0.9-0.999。在验证和保存模型时会使用影子权重 $v_t$，然后恢复为模型权重$\theta_t$进行后面的训练。
+
+下面解释ema为什么有效，令$n$时刻的模型权重为 $\theta_n$，梯度为 $g_n$，影子权重为$v_n$，则有
+$$
+{\theta _n} = {\theta _{n - 1}} - {g_{n - 1}} = {\theta _{n - 2}} - {g_{n - 1}} - {g_{n - 2}} =  \cdots  = {\theta _1} - \sum\limits_{i = 1}^{n - 1} {{g_i}} 
+$$
+$$
+{v_n} = \beta  \cdot {v_{n - 1}} + (1 - \beta ) \cdot {\theta _n} =  \cdots  = {\beta ^n} \cdot {v_0} + (1 - \beta ) \cdot \left( {{\theta _n} + \beta {\theta _{n - 1}} +  \cdots  + {\beta ^{n - 1}}{\theta _1}} \right)
+$$
+将 $\theta_n$代入$v_n$中可以得到
+$$
+{v_n} = {\beta ^n} \cdot {v_0} + (1 - {\beta ^n}){\theta _1} - \sum\limits_{i = 1}^{n - 1} {\left( {1 - {\beta ^{n - i}}} \right)} {g_i} = {\theta _1} - \sum\limits_{i = 1}^{n - 1} {\left( {1 - {\beta ^{n - i}}} \right)} {g_i}
+$$
+可以看到验证时使用的权重实际上为模型权重加上学习率衰减的梯度，使得验证过程更加稳定。
+
+除了根据batch进行平均还有根据epoch进行平均，可以参考[starrytong/SCNet](https://github.com/starrytong/SCNet)中的实现，默认情况下设置了四种ema方案，两种根据batch，两种根据epoch
+
+[Switch EMA](https://arxiv.org/abs/2402.09240)提出在每个epoch后使用影子权重更新模型权重
+
+
 # 损失函数
 
 
