--- a/人工智能.md
+++ b/人工智能.md
@@ -2299,6 +2299,64 @@ softplus可以用relu近似，得到
 
 # LLM
 
+
+## ollama
+
+[Ollama](https://ollama.com/)
+
+可以用于部署大模型，有多种大模型可选，参考[Ollama Search](https://ollama.com/search)，其中一些参数较少的大模型可以在本地单个GPU运行
+
+### 安装
+
+Windows：在[Download Ollama on Windows](https://ollama.com/download)中下载安装包，默认的安装路径在C盘，可以参考[Windows - Ollama](https://docs.ollama.com/windows)修改安装路径
+```powershell
+OllamaSetup.exe /DIR="d:\some\location"
+```
+
+Linux：建议直接参考[Linux - Ollama](https://docs.ollama.com/linux)中的Manual install进行安装
+
+
+### 运行
+
+在Windows下直接运行应用即可，如果想要以命令行的形式运行，可以参考Linux下的运行方式
+
+在Linux下，首先启动ollama的本地服务器
+
+```bash
+ollama serve
+```
+
+然后可以在另外一个终端中输入命令 `ollama -v` 来判断是否正在运行
+
+运行大模型的命令如下所示
+
+```bash
+ollama run deepseek-r1:7b
+```
+
+ollama服务器默认会监听 `http://localhost:11434`，所以可以通过下面的命令来查看ollama的版本
+
+```bash
+curl http://localhost:11434/api/version
+```
+
+
+如果希望在局域网中访问ollama服务，可以在一台机器中通过下面的指令运行ollama服务
+
+```bash
+export OLLAMA_HOST=0.0.0.0:11434
+ollama serve
+```
+
+然后在这台机器中另外一个终端中运行大模型即可
+
+只需要获得运行ollama服务的机器的ip地址（假设为 192.168.110.31）即可访问服务，如下所示
+
+```bash
+curl http://192.168.110.31:11434/api/version
+```
+
+
 ## minimind
 
 ### 基本结构
