--- a/人工智能.md
+++ b/人工智能.md
@@ -2357,6 +2357,61 @@ curl http://192.168.110.31:11434/api/version
 ```
 
 
+### Go+ollama
+
+使用go语言访问ollama服务，并使用ollama提供的搜索功能
+
+使用ollama的搜索功能[Web search - Ollama](https://docs.ollama.com/capabilities/web-search)需要申请api key，搜索功能可以通过curl命令实现，go 中直接通过 `net/http` 包实现
+
+聊天功能[Structured Outputs - Ollama](https://docs.ollama.com/capabilities/structured-outputs) 也可以通过 `net/http`包实现
+
+代码地址为：[test_ollama.go](https://gist.github.com/Xiang-M-J/bf8ca0a99c336865f8de00fc603b4f0b)
+
+
+### Genkit
+
+[Genkit - Open-source AI framework by Google in JavaScript, Go and Python](https://genkit.dev/)
+
+上面的go+ollama需要写很多代码，而Genkit这个库可以简化这个过程
+
+```go
+import (
+    "context"
+    "log"
+
+    "github.com/firebase/genkit/go/ai"
+    "github.com/firebase/genkit/go/genkit"
+    "github.com/firebase/genkit/go/plugins/ollama"
+)
+
+func main() {
+    ctx := context.Background()
+    g := genkit.Init(ctx, genkit.WithPlugins(
+        &ollama.Ollama{
+            ServerAddress: "http://localhost:11434",
+        },
+    }))
+
+    resp, err := genkit.Generate(ctx, g,
+        ai.WithPrompt("Why is Genkit awesome?"),
+        ai.WithModelName("ollama/gemma3:latest"),
+    )
+    if err != nil {
+        log.Fatal(err)
+    }
+
+    log.Println(resp.Text())
+}
+```
+
+
+### Eino
+
+[Eino: 概述 | CloudWeGo](https://www.cloudwego.io/zh/docs/eino/overview/)
+
+和genkit类似
+
+
 ## minimind
 
 ### 基本结构
